tests/sources/invalid/imports/import_cycle_b_provider.fire
// Second half of the import cycle (provider module, not a standalone case).
import import_cycle_a.ping;

export int32 pong(int32 x) {
    return ping(x) + 1;
}
